# Autonomous-Market-Competitive-Intelligence-Agent

./: LICENSE  README.md  pyproject.toml
memory/: chroma.sqlite3  long_term_memory_storage.db
outputs/: company_research.json  final_report.md  trending_companies.json
src/autonomous_market_intelligence/: crew.py  main.py
src/autonomous_market_intelligence/config/: agents.yaml  tasks.yaml
