[project]
name = "autonomous_market_intelligence"
version = "0.1.0"
description = "autonomous-market-intelligence using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
autonomous_market_intelligence = "autonomous_market_intelligence.main:run"
run_crew = "autonomous_market_intelligence.main:run"
train = "autonomous_market_intelligence.main:train"
replay = "autonomous_market_intelligence.main:replay"
test = "autonomous_market_intelligence.main:test"
run_with_trigger = "autonomous_market_intelligence.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
